<resources>
    <string name="app_name">tarea03</string>
    <string name="navigation_drawer_open">Abrir navigation drawer</string>
    <string name="navigation_drawer_close">Cerrar navigation drawer</string>
    <string name="nav_header_title">App de Pokemon´s</string>
    <string name="nav_header_subtitle" translatable="false">Francisco Ramírez Ramos</string>
    <string name="nav_header_desc">Cabecera navegación</string>
    <string name="about_settings">Acerca de</string>
    <string name="pokemon_image">Imagen del Pokemon</string>
    <string name="pokemon_name">Nombre del Pokemon</string>
    <string name="pokemon_type">Tipo del Pokemon</string>
    <string name="id_pokemon">ID del Pokemon</string>
    <string name="resources">Tipo del Pokemon</string>
    <string name="pokemon_weight">Peso del Pokemon</string>
    <string name="pokemon_height">Altura del Pokemon</string>
    <string name="menu_pokedex">Menú Pokedex</string>
    <string name="menu_home">Lista de Pokemon</string>
    <string name="menu_settings">Ajustes</string>
    <string name="delete_pokemon">Borrar pokemon</string>
    <string name="pokemon_image_desc">descripcion imagen</string>
    <string name="pokemon_name_placeholder">placeholder</string>

    <!-- Nuevos textos para la pestaña de Ajustes -->
    <string name="settings_title">Configuraciones</string>
    <string name="allow_deletion">Permitir eliminación de Pokémon capturados</string>
    <string name="laguage">Idioma</string>
    <string-array name="language_options">
        <item>Castellano</item>
        <item>Inglés</item>
    </string-array>
    <string name="logout">Cerrar sesión</string>
    <string name="vibration_setting">Activar vibración en notificaciones</string>
    <string name="language_changed_es">Idioma cambiado a Castellano</string>
    <string name="language_changed_en">Idioma cambiado a Inglés</string>
</resources>
